# advent-of-code-2024

./: .gitignore  .pylintrc  mse.py  pyproject.toml  run.sh  tests.sh
advent_of_code_2024/day01/: program.py
advent_of_code_2024/utils/: reader.py
aoc2024/day01/: __main__.py  main.py  program.py
aoc2024/day02/: __main__.py  program.py
aoc2024/day03/: __main__.py  input_test.txt  main.py
aoc2024/day04/: __main__.py  input_test.txt
aoc2024/day05/: __main__.py
aoc2024/day06/: __main__.py  main.py  rex.txt
aoc2024/day07/: __main__.py
aoc2024/day08/: __main__.py
aoc2024/day09/: __main__.py  correction.py  main.py
aoc2024/day10/: __main__.py
aoc2024/day11/: __main__.py  main.py
aoc2024/day12/: __main__.py  main.py
aoc2024/day13/: __main__.py  main.py
aoc2024/day14/: __main__.py  old.py
aoc2024/day15/: __main__.py  main.py
aoc2024/day16/: __main__.py  main.py
aoc2024/day17/: __main__.py  decoder.py  part2.py
aoc2024/day18/: __main__.py  main.py
aoc2024/day19/: __main__.py
aoc2024/day20/: __main__.py  main.py
aoc2024/day21/: __main__.py  keypad.txt  main.py
aoc2024/day22/: README.txt  __main__.py  main.py  strip.py
aoc2024/day23/: main.py
aoc2024/day24/: README.md  __main__.py
aoc2024/day25/: __main__.py  main.py
aoc2024/day99/: __main__.py
aoc2024/utils/: collections.py  lists.py  mynumpy.py  reader.py  timer.py
