[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Attila Szucs <attila.szucs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
