[project]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = [{ name = "Attila Szucs", email = "attila.szucs@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "numpy>=2.1.3,<3",
    "networkx>=3.4.2,<4",
]

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "pylint>=3.3.2,<4",
    "mypy>=1.13.0,<2",
    "types-networkx>=3.4.2.20241115,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
