[project]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = [{ name = "Attila Szucs", email = "attila.szucs@gmail.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.14.1",
    "pylint>=3.3.4",
    "types-networkx>=3.4.2.20241227",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
